backend/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: shreeanshgupta/auth
          # env:
          #   - name: PORT
          #     value: "5000"
          #   - name: NODE_ENV
          #     value: "development"
          #   - name: MONGO_URI
          #     value: "mongodb://mongo-service.default.svc.cluster.local"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - name: auth-port
      port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
